add JS script to index.html (Landing Page)

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -14,3 +14,5 @@ wear but it does the job as advertised.
 <p>
 For the second page, nothing needs to be done.
 </p>
+        <!-- Include Scala.js compiled code -->
+        <script type="text/javascript" src="/assets/js/scala-js-tutorial-fastopt.js"></script>
